Fix: wrapped useSearchParams with Suspense in not-found page

--- a/app/_style/Category.module.css
+++ b/app/_style/Category.module.css
@@ -127,7 +127,7 @@
 .part2 {
   display: flex;
   flex-direction: column;
-  align-items: end;
+  align-items: flex-end;
 }
 .priceValue {
   color: #212121;
